# localllm

./: Cargo.toml  README.md  index.html
src/: api.rs  app.rs  main.rs  types.rs
src/app/: api.rs  types.rs
