[package]
name = "locallm"
version = "0.1.0"
edition = "2021"

[dependencies]
full = "0.1.0"
main = "0.1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.203"
tokio = { version = "1", features = ["full"] }
web-sys = "0.3.67"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
